# contact-list

./: .gitignore  pyproject.toml
contact/: admin.py  models.py
contact/migrations/: 0001_initial.py  0002_contact_sendmessage.py
contactList/: asgi.py  settings.py  urls.py  wsgi.py
