[tool.poetry]
name = "contact-list"
version = "0.1.0"
description = "Contact list web application"
authors = ["Marlo Eichenberg Motta <devmaster@programmerhero.com.br>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.2.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
